--- a/style.css
+++ b/style.css
@@ -132,8 +132,8 @@ body{
    font-family: raleway, sans-serif;
    line-height: 1.5em;
    margin-bottom: 0;
-   color:rgb(14, 14, 31)
-   font-size: 40px
+   color:rgb(14, 14, 31);
+   font-size: 40px;
   }
   
   main a {
